<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar"/>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/book_name">

            <EditText
                android:id="@+id/et_book_name"
                style="@style/TextInputLayoutStyle"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_type"
                app:layout_constraintTop_toBottomOf="@id/til_reader_name"/>

            <Spinner
                android:id="@+id/sp_book_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_publish_date"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#22b0b4b0"
                android:gravity="center_vertical"
                android:text="@string/publish_date"/>

            <TextView
                android:id="@+id/tv_enroll_date"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#22b0b4b0"
                android:gravity="center_vertical"
                android:text="@string/enroll_date"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/author_name">

            <EditText
                android:id="@+id/et_author_name"
                style="@style/TextInputLayoutStyle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/press_name">

            <EditText
                android:id="@+id/et_press_name"
                style="@style/TextInputLayoutStyle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/price">

            <EditText
                android:id="@+id/et_price"
                style="@style/TextInputLayoutStyle"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/page_num">

            <EditText
                android:id="@+id/et_page_num"
                style="@style/TextInputLayoutStyle"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/keyword">

            <EditText
                android:id="@+id/et_keywords"
                style="@style/TextInputLayoutStyle"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/remark">

            <EditText
                android:id="@+id/et_remark"
                style="@style/TextInputLayoutStyle"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_book"
            style="@style/BtnAddStyle"
            android:text="@string/add_book"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>