<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:hint="@string/type_name">

        <EditText
            android:id="@+id/et_book_category_name"
            style="@style/TextInputLayoutStyle"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:hint="@string/keyword">

        <EditText
            android:id="@+id/et_keyword"
            style="@style/TextInputLayoutStyle"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:hint="@string/remark">

        <EditText
            android:id="@+id/et_remark"
            style="@style/TextInputLayoutStyle"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_book_type"
        style="@style/BtnAddStyle"
        android:text="@string/add_book_type"/>
</LinearLayout>