<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.rdc.librarysystem.ui.ReturnBookActivity">

    <include layout="@layout/include_toolbar"/>

    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:hint="@string/reader_card_number">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/tv_auto_complete_reader_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:hint="@string/return_book_number">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/tv_auto_complete_book_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_return"
        style="@style/BtnAddStyle"
        android:text="@string/return_book"/>

</LinearLayout>
